--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,29 @@
 ﻿version: '3.9'
 
 services:
+  librarymanagementapi:
+    build:
+      context: .
+      dockerfile: LibraryManagementApp/Dockerfile
+    ports:
+      - "5000:8080"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ConnectionStrings__DefaultConnection=Host=db;Database=librarydb;Username=test;Password=test
+      - Jwt__Key=YourSuperSecretKeyThatIsAtLeast32CharactersLong
+      - Jwt__Issuer=https://localhost:5000
+      - Jwt__Audience=LibraryManagementAPI
+    depends_on:
+      - db
+
+  identityapi:
+    build:
+      context: .
+      dockerfile: Identity/Dockerfile
+    ports:
+      - "5001:8080"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
   db:
     image: postgres:latest
     environment:
