--- a/LibraryManagementApp/LibraryManagementApp.csproj
+++ b/LibraryManagementApp/LibraryManagementApp.csproj
@@ -9,12 +9,12 @@
       <UserSecretsId>9174526e-4d4e-48f0-a970-70e0a857376c</UserSecretsId>
   </PropertyGroup>
 
-    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-      <DocumentationFile>bin\Debug\LibraryManagementApp.xml</DocumentationFile>
+    <PropertyGroup>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <DocumentationFile>bin\Debug\net8.0\LibraryManagementApp.xml</DocumentationFile>
+        <NoWarn>$(NoWarn);1591</NoWarn>
     </PropertyGroup>
     
-    
-
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.2" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.2" />
